Adições de novos css

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
                 <h3 class="titulo">Jurassic Park</h3>
                 <p class="descricao">Um parque construído por um milionário tem como habitantes dinossauros diversos, extintos a sessenta e cinco milhões de anos. Isto é possível por ter sido encontrado um inseto fossilizado, que tinha sugado sangue destes dinossauros, de onde pôde-se isolar o DNA, o código químico da vida, e, a partir deste ponto, recriá-los em laboratório. Mas, o que parecia ser um sonho se torna um pesadelo, quando a experiência sai do controle de seus criadores.</p>
                 <button role="button" class="botao">
+                    <i class="fas fa-play"></i>
                     ASSISTIR AGORA
                 </button>
                 <button role="button" class="botao">
+                    <i class="fas fa-question-circle"></i>
                     MAIS INFORMAÇÕES
                 </button>
             </div>
         </div>
     </div>
 </main>
-
+<script src="https://kit.fontawesome.com/05a7941fe6.js" crossorigin="anonymous"></script>
 </body>
 </html>
