--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+   
+   
+   <!--Adição do Link OWL-->
+   
+   <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+   <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+   
     <title>DinoFlix</title>
 </head>
 <body>
@@ -41,6 +48,9 @@
 </main>
 
 <script src="https://kit.fontawesome.com/05a7941fe6.js" crossorigin="anonymous"></script>
+
+<script src="js/owl/jquery.min.js"></script>
+<script src="js/owl/owl.carousel.min.js"></script>
 
 </body>
 </html>
