--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <link rel="shortcut icon" href="icon/D-Flix.ico" type="image/x-icon">
 
     <!--responsividade-->
     <link rel="stylesheet" href="style/responsive.css">
